k8s/overlays/development/server-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
      - name: server
        image: extheoisah/hxckr-core:main
