k8s/overlays/development/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16.4-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-soft-serve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-soft-serve
  template:
    metadata:
      labels:
        app: postgres-soft-serve
    spec:
      containers:
      - name: postgres
        image: postgres:16.4-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-soft-serve
spec:
  selector:
    app: postgres-soft-serve
  ports:
  - port: 5432
