k8s/overlays/development/server-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: LoadBalancer
